syntax = "proto3";

package api.v1.services.auth;

import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";
import "security/jwt/v1/token.proto";

option go_package = "v1/services/auth;auth";
option java_multiple_files = true;
option java_outer_classname = "APIV1ServicesAuthProto";
option java_package = "com.origadmin.api.v1.admin.services.auth";

// The login service definition.
service AuthAPI {
  // CreateToken generates a new JWT token for the given user.
  rpc CreateToken(CreateTokenRequest) returns (CreateTokenResponse);

  // VerifyToken verifies the validity of a JWT token.
  rpc VerifyToken(VerifyTokenRequest) returns (VerifyTokenResponse);

  // DestroyToken invalidates a JWT token.
  rpc DestroyToken(DestroyTokenRequest) returns (DestroyTokenResponse);
}

// CreateTokenRequest contains the information needed to create a token.
message CreateTokenRequest {
  string user_id = 1;
  repeated string scopes = 2;
}

// CreateTokenResponse contains the generated token.
message CreateTokenResponse {
  string token = 1;
}

// VerifyTokenRequest contains the token to be verified.
message VerifyTokenRequest {
  string token = 1;
}

// VerifyTokenResponse contains the result of the verification.
message VerifyTokenResponse {
  bool is_valid = 1;
  map<string, string> claims = 2;
}

// DestroyTokenRequest contains the token to be invalidated.
message DestroyTokenRequest {
  string token = 1;
}

// DestroyTokenResponse contains the result of the invalidation.
message DestroyTokenResponse {
  google.protobuf.Empty empty = 1;
}
